[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.15", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zerokv"
version = "0.1.0"
description = "High-performance distributed KV store for AI training"
readme = "README.md"
authors = [
    {name = "ZeroKV Team", email = "team@zerokv.io"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/zerokv/zerokv"
Documentation = "https://zerokv.readthedocs.io"
Repository = "https://github.com/zerokv/zerokv"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
packages = ["zerokv"]

[tool.setuptools.package-data]
zerokv = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require running server)",
    "slow: marks tests as slow running",
    "benchmark: marks tests as performance benchmarks",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
